Venue Owner Register API
