# app/Http/Resources/VenueOwnerResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class VenueOwnerResource extends JsonResource
+{
+    public static $wrap = "data";
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'email' => $this->email,
+            'phone_number' => $this->phone_number,
+            'national_id_number' => $this->national_id_number,
+            'token' => $this->whenNotNull($this->token)
+        ];
+    }
+}
